fixed image not showing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url('/images/background.jpg');
+    background-image: url('images/background.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: 'Roboto', sans-serif;
